--- a/#sourse/style.scss
+++ b/#sourse/style.scss
@@ -1,15 +1,123 @@
 @import "null.scss";
 
 body {
-  background-color: #2e2e22;
   font-family: "Montserrat", sans-serif;
   font-weight: normal;
+
+  .page {
+    &-light {
+      background-color: #f9f6f1;
+    }
+    &-dark {
+      background-color: #212121;
+    }
+  }
 
   .container {
     width: 1130px;
     margin: 0 auto;
     padding: 0 10px;
   }
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 126px;
+    padding-top: 40px;
+    .nav {
+      display: flex;
+      &_item {
+        margin-right: 52px;
+        &:last-child {
+          margin-right: 0;
+        }
+      }
+      &_link {
+        color: black;
+        font-weight: 500;
+      }
+    }
+    .cart {
+      background: url(../images/cart.svg) no-repeat 0 center;
+      padding-left: 90px;
+      display: block;
+      width: 30px;
+      height: 30px;
+      &_count {
+        background: url(http://infotpvers.temp.swtest.ru/img/cart-bg.svg)
+          no-repeat 0 center;
+        color: white;
+        font-size: 12px;
+        font-weight: 700;
+        padding: 10px 24px;
+        display: block;
+        margin-left: -45px;
+      }
+    }
+  }
+  .btn {
+    background-color: #d7b399;
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    padding: 18px 28px;
+  }
+  .main {
+    display: flex;
+    justify-content: space-between;
+    &_item {
+      flex: 0 0 50%;
+    }
+    .sale {
+      &_subtitle {
+        font-size: 30px;
+        margin-top: 25px;
+      }
+      &_title {
+        font-size: 55px;
+        font-weight: 700;
+        text-transform: uppercase;
+        margin-top: 20px;
+        margin-bottom: 65px;
+      }
+    }
+  }
+  .products {
+    position: relative;
+    margin-bottom: 130px;
+    &_price {
+      position: absolute;
+      right: 0;
+      top: 35px;
+      text-align: right;
+      &-old {
+        font-size: 24px;
+        font-weight: 700;
+      }
+      &-new {
+        font-size: 42px;
+        font-weight: 700;
+        color: #d84033;
+        margin-top: 17px;
+      }
+    }
+  }
+  .info {
+    text-align: center;
+    color: #fff;
+    padding: 80px 0 70px;
 
-  
+    &_title {
+      font-size: 30px;
+      text-transform: uppercase;
+      span {
+        font-weight: 700;
+      }
+    }
+    &_subtitle {
+      font-size: 21px;
+      font-weight: 300;
+      padding-top: 20px;
+    }
+  }
 }
