--- a/#sourse/style.scss
+++ b/#sourse/style.scss
@@ -37,21 +37,42 @@ body {
         font-weight: 500;
       }
     }
+
     .cart {
-      background: url(../images/cart.svg) no-repeat 0 center;
-      padding-left: 90px;
-      display: block;
-      width: 30px;
-      height: 30px;
-      &_count {
-        background: url(http://infotpvers.temp.swtest.ru/img/cart-bg.svg)
-          no-repeat 0 center;
-        color: white;
+      display: flex;
+      width: 100px;
+      justify-content: space-between;
+      align-items: center;
+
+      .cart_cart {
+        background: url(../images/cart.svg) no-repeat 0 center;
+        width: 30px;
+        height: 30px;
+      }
+      .cart_count {
+        background-color: #d7b399;
+        color: #fff;
         font-size: 12px;
         font-weight: 700;
-        padding: 10px 24px;
-        display: block;
-        margin-left: -45px;
+        padding-left: 12px;
+        padding-right: 10px;
+        height: 16px;
+
+        display: flex;
+        align-items: center;
+
+        position: relative;
+
+        &::after {
+          content: "";
+          position: absolute;
+          display: block;
+          right: 100%;
+
+          border-top: 8px solid transparent;
+          border-right: 16px solid #d7b399;
+          border-bottom: 8px solid transparent;
+        }
       }
     }
   }
