--- a/#sourse/style.scss
+++ b/#sourse/style.scss
@@ -40,7 +40,7 @@ body {
 
     .cart {
       display: flex;
-      width: 100px;
+      width: 90px;
       justify-content: space-between;
       align-items: center;
 
@@ -76,12 +76,30 @@ body {
       }
     }
   }
+  .title_h2 {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
   .btn {
     background-color: #d7b399;
     color: #fff;
     font-size: 16px;
     text-transform: uppercase;
     padding: 18px 28px;
+    &-xs {
+      padding: 7px 30px;
+    }
+    &-center {
+      display: block;
+      text-align: center;
+      max-width: 210px;
+      margin: 0 auto;
+      span {
+        margin-right: 10px;
+      }
+    }
   }
   .main {
     display: flex;
@@ -139,6 +157,89 @@ body {
       font-size: 21px;
       font-weight: 300;
       padding-top: 20px;
+    }
+  }
+  .collection {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 150px;
+
+    &_item {
+      flex: 0 0 48%;
+      padding: 50px 0;
+      background-size: 190px 171px;
+    }
+    &_man {
+      background: url(../images/man.png) no-repeat right bottom;
+    }
+    &_woman {
+      background: url(../images/woman.png) no-repeat right bottom;
+    }
+    &_title {
+      font-size: 24px;
+      font-weight: 300;
+      text-transform: uppercase;
+    }
+    &_text {
+      padding-top: 25px;
+      font-size: 16px;
+      margin-bottom: 40px;
+    }
+  }
+  .product {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    margin-top: 90px;
+    margin-bottom: 80px;
+
+    &_item {
+      border: 3px solid #d7b399;
+      padding: 20px;
+    }
+    &_title {
+      font-weight: 600;
+      padding-top: 25px;
+      line-height: 1.2;
+    }
+    &_price {
+      color: #d7b399;
+      font-size: 18px;
+      font-weight: 700;
+      padding-top: 15px;
+    }
+  }
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 0;
+    margin-top: 100px;
+    &_logo {
+      flex: 0 0 40%;
+    }
+    &_nav {
+      flex: 0 0 60%;
+      display: flex;
+      justify-content: space-between;
+      color: #fff;
+    }
+    &_list {
+      &-title {
+        font-size: 10px;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+      &-item {
+        margin-bottom: 10px;
+      }
+      &-link {
+        color: #cbcfd4;
+        line-height: 1.1;
+        font-size: 14px;
+      }
+      &-img {
+        margin-right: 10px;
+      }
     }
   }
 }
