--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,8 @@ body {
       justify-content: space-between;
       -webkit-box-align: center;
       -ms-flex-align: center;
-      align-items: center; }
+      align-items: center;
+      background-color: #f9f6f1; }
       body .header .cart .cart_cart {
         background: url(../images/cart.svg) no-repeat 0 center;
         width: 30px;
@@ -186,6 +187,8 @@ body {
         font-weight: 700;
         color: #d84033;
         margin-top: 17px; }
+    body .products_img {
+      width: 100%; }
   body .info {
     text-align: center;
     color: #fff;
@@ -283,3 +286,14 @@ body {
       font-size: 14px; }
     body .footer_list-img {
       margin-right: 10px; }
+  body .sub_footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+    body .sub_footer-text {
+      font-size: 14px;
+      line-height: 1.2;
+      padding: 20px 0; }
