--- a/#sourse/style.scss
+++ b/#sourse/style.scss
@@ -3,6 +3,106 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: normal;
+  .wrapper-body {
+    position: relative;
+    overflow-x: hidden;
+    .menu {
+      display: flex;
+      position: fixed;
+      z-index: 99;
+      left: 0;
+      top: 0;
+      width: 30%;
+      height: 100vh;
+      align-items: center;
+      justify-content: center;
+      background-color: #fff;
+      border: 4px solid #d7b399;
+      transition: 0.7s;
+      transform: translateX(-100%);
+      @media (max-width: 991px) {
+        width: 50%;
+      }
+      @media (max-width: 767px) {
+        width: 80%;
+      }
+      @media (max-width: 575px) {
+        width: 90%;
+      }
+      .menu-list {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 50%;
+        flex-direction: column;
+
+        a {
+          text-transform: uppercase;
+          font-weight: 900;
+          color: #d7b399;
+        }
+        &_logo {
+          margin-bottom: 50px;
+        }
+      }
+      .menu-btn {
+        display: block;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: #d7b399;
+        position: absolute;
+        right: -45px;
+        top: 30px;
+
+        span {
+          width: 20px;
+          height: 2px;
+          background-color: #000;
+          top: 50%;
+          left: 50%;
+          margin-left: -10px;
+          margin-top: -1px;
+          position: absolute;
+          &::before {
+            content: "";
+            width: 20px;
+            height: 2px;
+            background-color: #000;
+            top: 50%;
+            left: 50%;
+            margin-left: -10px;
+            margin-top: -1px;
+            position: absolute;
+            transform: translateY(-5px);
+          }
+          &::after {
+            content: "";
+            width: 20px;
+            height: 2px;
+            background-color: #000;
+            top: 50%;
+            left: 50%;
+            margin-left: -10px;
+            margin-top: -1px;
+            position: absolute;
+            transform: translateY(5px);
+          }
+        }
+      }
+    }
+    .menu_active {
+      transform: translateX(0%);
+    }
+    .content {
+      transition: 0.7s;
+      position: relative;
+      z-index: 0;
+    }
+    .content_active {
+      transform: translateX(30%);
+    }
+  }
 
   .page {
     &-light {
@@ -17,6 +117,18 @@ body {
     width: 1130px;
     margin: 0 auto;
     padding: 0 10px;
+    @media (max-width: 1199px) {
+      width: 960px;
+    }
+    @media (max-width: 991px) {
+      width: 720px;
+    }
+    @media (max-width: 767px) {
+      width: 540px;
+    }
+    @media (max-width: 575px) {
+      width: 100%;
+    }
   }
   .header {
     display: flex;
@@ -24,6 +136,9 @@ body {
     align-items: center;
     margin-bottom: 126px;
     padding-top: 40px;
+    @media (max-width: 575px) {
+      margin-bottom: 80px;
+    }
     .nav {
       display: flex;
       &_item {
@@ -35,6 +150,20 @@ body {
       &_link {
         color: black;
         font-weight: 500;
+      }
+      @media (max-width: 1199px) {
+        display: none;
+      }
+      &_logo {
+        @media (max-width: 1199px) {
+          margin-left: 130px;
+        }
+        @media (max-width: 767px) {
+          margin-left: 70px;
+        }
+        @media (max-width: 575px) {
+          display: none;
+        }
       }
     }
 
@@ -81,6 +210,9 @@ body {
     font-size: 36px;
     font-weight: 700;
     text-transform: uppercase;
+    @media (max-width: 767px) {
+      font-size: 30px;
+    }
   }
   .btn {
     background-color: #d7b399;
@@ -88,6 +220,9 @@ body {
     font-size: 16px;
     text-transform: uppercase;
     padding: 18px 28px;
+    @media (max-width: 991px) {
+      padding: 15px;
+    }
     &-xs {
       padding: 7px 30px;
     }
@@ -104,6 +239,7 @@ body {
   .main {
     display: flex;
     justify-content: space-between;
+
     &_item {
       flex: 0 0 50%;
     }
@@ -111,6 +247,9 @@ body {
       &_subtitle {
         font-size: 30px;
         margin-top: 25px;
+        @media (max-width: 575px) {
+          margin-top: 10px;
+        }
       }
       &_title {
         font-size: 55px;
@@ -118,40 +257,72 @@ body {
         text-transform: uppercase;
         margin-top: 20px;
         margin-bottom: 65px;
+        @media (max-width: 991px) {
+          font-size: 50px;
+        }
+        @media (max-width: 575px) {
+          font-size: 30px;
+        }
       }
+    }
+    @media (max-width: 991px) {
+      flex-direction: column;
     }
   }
   .products {
     position: relative;
     margin-bottom: 130px;
+    @media (max-width: 991px) {
+      margin-top: 100px;
+      margin-bottom: 80px;
+    }
+
     &_price {
       position: absolute;
       right: 0;
       top: 35px;
       text-align: right;
+      @media (max-width: 767px) {
+        top: 0;
+      }
       &-old {
         font-size: 24px;
         font-weight: 700;
+        @media (max-width: 767px) {
+          font-size: 18px;
+        }
       }
       &-new {
         font-size: 42px;
         font-weight: 700;
         color: #d84033;
         margin-top: 17px;
+        @media (max-width: 767px) {
+          font-size: 30px;
+        }
       }
     }
     &_img {
       width: 100%;
+      @media (max-width: 991px) {
+        width: 70%;
+      }
     }
   }
   .info {
     text-align: center;
     color: #fff;
     padding: 80px 0 70px;
+    @media (max-width: 767px) {
+      padding: 50px 0 40px;
+    }
 
     &_title {
       font-size: 30px;
       text-transform: uppercase;
+      @media (max-width: 767px) {
+        font-size: 25px;
+      }
       span {
         font-weight: 700;
       }
@@ -160,17 +331,33 @@ body {
       font-size: 21px;
       font-weight: 300;
       padding-top: 20px;
+      @media (max-width: 767px) {
+        font-size: 18px;
+      }
     }
   }
   .collection {
     display: flex;
     justify-content: space-between;
     margin-bottom: 150px;
+    @media (max-width: 1199px) {
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+    @media (max-width: 767px) {
+      margin-bottom: 80px;
+    }
 
     &_item {
       flex: 0 0 48%;
       padding: 50px 0;
       background-size: 190px 171px;
+      @media (max-width: 1199px) {
+        flex: 0 0 100%;
+      }
+      @media (max-width: 767px) {
+        padding: 110px 0;
+      }
     }
     &_man {
       background: url(../images/man.png) no-repeat right bottom;
@@ -189,16 +376,25 @@ body {
       margin-bottom: 40px;
     }
   }
+
   .product {
     display: flex;
     justify-content: space-between;
     text-align: center;
     margin-top: 90px;
     margin-bottom: 80px;
+    @media (max-width: 1199px) {
+      flex-wrap: wrap;
+      justify-content: space-around;
+      margin-bottom: 60px;
+    }
 
     &_item {
       border: 3px solid #d7b399;
       padding: 20px;
+      @media (max-width: 1199px) {
+        margin-bottom: 20px;
+      }
     }
     &_title {
       font-weight: 600;
@@ -217,28 +413,61 @@ body {
     justify-content: space-between;
     padding: 30px 0;
     margin-top: 100px;
+    @media (max-width: 1199px) {
+      flex-wrap: wrap;
+      flex-direction: column;
+    }
+
     &_logo {
       flex: 0 0 40%;
+      @media (max-width: 1199px) {
+        flex: 0 0 100%;
+        margin-bottom: 40px;
+        text-align: center;
+      }
     }
     &_nav {
       flex: 0 0 60%;
       display: flex;
       justify-content: space-between;
       color: #fff;
+      @media (max-width: 1199px) {
+        flex: 0 0 100%;
+        flex-wrap: wrap;
+      }
     }
     &_list {
+      @media (max-width: 767px) {
+        flex: 0 0 49%;
+        margin-bottom: 30px;
+        text-align: center;
+      }
+      @media (max-width: 575px) {
+        flex: 0 0 100%;
+        margin-bottom: 30px;
+        text-align: center;
+      }
       &-title {
         font-size: 10px;
         font-weight: 700;
         text-transform: uppercase;
+        @media (max-width: 1199px) {
+          font-size: 15px;
+        }
       }
       &-item {
         margin-bottom: 10px;
+        @media (max-width: 1199px) {
+          margin-bottom: 20px;
+        }
       }
       &-link {
         color: #cbcfd4;
         line-height: 1.1;
         font-size: 14px;
+        @media (max-width: 1199px) {
+          font-size: 15px;
+        }
       }
       &-img {
         margin-right: 10px;
@@ -252,6 +481,9 @@ body {
       font-size: 14px;
       line-height: 1.2;
       padding: 20px 0;
+      @media (max-width: 575px) {
+        font-size: 10px;
+      }
     }
   }
 }
