--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,120 @@ h1, h2, h3, h4, h5, h6 {
 body {
   font-family: "Montserrat", sans-serif;
   font-weight: normal; }
+  body .wrapper-body {
+    position: relative;
+    overflow-x: hidden; }
+    body .wrapper-body .menu {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      position: fixed;
+      z-index: 99;
+      left: 0;
+      top: 0;
+      width: 30%;
+      height: 100vh;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      background-color: #fff;
+      border: 4px solid #d7b399;
+      -webkit-transition: 0.7s;
+      -o-transition: 0.7s;
+      transition: 0.7s;
+      -webkit-transform: translateX(-100%);
+      -ms-transform: translateX(-100%);
+      transform: translateX(-100%); }
+      @media (max-width: 991px) {
+        body .wrapper-body .menu {
+          width: 50%; } }
+      @media (max-width: 767px) {
+        body .wrapper-body .menu {
+          width: 80%; } }
+      @media (max-width: 575px) {
+        body .wrapper-body .menu {
+          width: 90%; } }
+      body .wrapper-body .menu .menu-list {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-pack: distribute;
+        justify-content: space-around;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        height: 50%;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column; }
+        body .wrapper-body .menu .menu-list a {
+          text-transform: uppercase;
+          font-weight: 900;
+          color: #d7b399; }
+        body .wrapper-body .menu .menu-list_logo {
+          margin-bottom: 50px; }
+      body .wrapper-body .menu .menu-btn {
+        display: block;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: #d7b399;
+        position: absolute;
+        right: -45px;
+        top: 30px; }
+        body .wrapper-body .menu .menu-btn span {
+          width: 20px;
+          height: 2px;
+          background-color: #000;
+          top: 50%;
+          left: 50%;
+          margin-left: -10px;
+          margin-top: -1px;
+          position: absolute; }
+          body .wrapper-body .menu .menu-btn span::before {
+            content: "";
+            width: 20px;
+            height: 2px;
+            background-color: #000;
+            top: 50%;
+            left: 50%;
+            margin-left: -10px;
+            margin-top: -1px;
+            position: absolute;
+            -webkit-transform: translateY(-5px);
+            -ms-transform: translateY(-5px);
+            transform: translateY(-5px); }
+          body .wrapper-body .menu .menu-btn span::after {
+            content: "";
+            width: 20px;
+            height: 2px;
+            background-color: #000;
+            top: 50%;
+            left: 50%;
+            margin-left: -10px;
+            margin-top: -1px;
+            position: absolute;
+            -webkit-transform: translateY(5px);
+            -ms-transform: translateY(5px);
+            transform: translateY(5px); }
+    body .wrapper-body .menu_active {
+      -webkit-transform: translateX(0%);
+      -ms-transform: translateX(0%);
+      transform: translateX(0%); }
+    body .wrapper-body .content {
+      -webkit-transition: 0.7s;
+      -o-transition: 0.7s;
+      transition: 0.7s;
+      position: relative;
+      z-index: 0; }
+    body .wrapper-body .content_active {
+      -webkit-transform: translateX(30%);
+      -ms-transform: translateX(30%);
+      transform: translateX(30%); }
   body .page-light {
     background-color: #f9f6f1; }
   body .page-dark {
@@ -69,6 +183,18 @@ body {
     width: 1130px;
     margin: 0 auto;
     padding: 0 10px; }
+    @media (max-width: 1199px) {
+      body .container {
+        width: 960px; } }
+    @media (max-width: 991px) {
+      body .container {
+        width: 720px; } }
+    @media (max-width: 767px) {
+      body .container {
+        width: 540px; } }
+    @media (max-width: 575px) {
+      body .container {
+        width: 100%; } }
   body .header {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -81,6 +207,9 @@ body {
     align-items: center;
     margin-bottom: 126px;
     padding-top: 40px; }
+    @media (max-width: 575px) {
+      body .header {
+        margin-bottom: 80px; } }
     body .header .nav {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -92,6 +221,18 @@ body {
       body .header .nav_link {
         color: black;
         font-weight: 500; }
+      @media (max-width: 1199px) {
+        body .header .nav {
+          display: none; } }
+      @media (max-width: 1199px) {
+        body .header .nav_logo {
+          margin-left: 130px; } }
+      @media (max-width: 767px) {
+        body .header .nav_logo {
+          margin-left: 70px; } }
+      @media (max-width: 575px) {
+        body .header .nav_logo {
+          display: none; } }
     body .header .cart {
       display: -webkit-box;
       display: -ms-flexbox;
@@ -136,12 +277,18 @@ body {
     font-size: 36px;
     font-weight: 700;
     text-transform: uppercase; }
+    @media (max-width: 767px) {
+      body .title_h2 {
+        font-size: 30px; } }
   body .btn {
     background-color: #d7b399;
     color: #fff;
     font-size: 16px;
     text-transform: uppercase;
     padding: 18px 28px; }
+    @media (max-width: 991px) {
+      body .btn {
+        padding: 15px; } }
     body .btn-xs {
       padding: 7px 30px; }
     body .btn-center {
@@ -165,43 +312,83 @@ body {
     body .main .sale_subtitle {
       font-size: 30px;
       margin-top: 25px; }
+      @media (max-width: 575px) {
+        body .main .sale_subtitle {
+          margin-top: 10px; } }
     body .main .sale_title {
       font-size: 55px;
       font-weight: 700;
       text-transform: uppercase;
       margin-top: 20px;
       margin-bottom: 65px; }
+      @media (max-width: 991px) {
+        body .main .sale_title {
+          font-size: 50px; } }
+      @media (max-width: 575px) {
+        body .main .sale_title {
+          font-size: 30px; } }
+    @media (max-width: 991px) {
+      body .main {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column; } }
   body .products {
     position: relative;
     margin-bottom: 130px; }
+    @media (max-width: 991px) {
+      body .products {
+        margin-top: 100px;
+        margin-bottom: 80px; } }
     body .products_price {
       position: absolute;
       right: 0;
       top: 35px;
       text-align: right; }
+      @media (max-width: 767px) {
+        body .products_price {
+          top: 0; } }
       body .products_price-old {
         font-size: 24px;
         font-weight: 700; }
+        @media (max-width: 767px) {
+          body .products_price-old {
+            font-size: 18px; } }
       body .products_price-new {
         font-size: 42px;
         font-weight: 700;
         color: #d84033;
         margin-top: 17px; }
+        @media (max-width: 767px) {
+          body .products_price-new {
+            font-size: 30px; } }
     body .products_img {
       width: 100%; }
+      @media (max-width: 991px) {
+        body .products_img {
+          width: 70%; } }
   body .info {
     text-align: center;
     color: #fff;
     padding: 80px 0 70px; }
+    @media (max-width: 767px) {
+      body .info {
+        padding: 50px 0 40px; } }
     body .info_title {
       font-size: 30px;
       text-transform: uppercase; }
+      @media (max-width: 767px) {
+        body .info_title {
+          font-size: 25px; } }
       body .info_title span {
         font-weight: 700; }
     body .info_subtitle {
       font-size: 21px;
       font-weight: 300;
       padding-top: 20px; }
+      @media (max-width: 767px) {
+        body .info_subtitle {
+          font-size: 18px; } }
   body .collection {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -210,12 +397,29 @@ body {
     -ms-flex-pack: justify;
     justify-content: space-between;
     margin-bottom: 150px; }
+    @media (max-width: 1199px) {
+      body .collection {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -ms-flex-pack: distribute;
+        justify-content: space-around; } }
+    @media (max-width: 767px) {
+      body .collection {
+        margin-bottom: 80px; } }
     body .collection_item {
       -webkit-box-flex: 0;
       -ms-flex: 0 0 48%;
       flex: 0 0 48%;
       padding: 50px 0;
       background-size: 190px 171px; }
+      @media (max-width: 1199px) {
+        body .collection_item {
+          -webkit-box-flex: 0;
+          -ms-flex: 0 0 100%;
+          flex: 0 0 100%; } }
+      @media (max-width: 767px) {
+        body .collection_item {
+          padding: 110px 0; } }
     body .collection_man {
       background: url(../images/man.png) no-repeat right bottom; }
     body .collection_woman {
@@ -238,9 +442,19 @@ body {
     text-align: center;
     margin-top: 90px;
     margin-bottom: 80px; }
+    @media (max-width: 1199px) {
+      body .product {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -ms-flex-pack: distribute;
+        justify-content: space-around;
+        margin-bottom: 60px; } }
     body .product_item {
       border: 3px solid #d7b399;
       padding: 20px; }
+      @media (max-width: 1199px) {
+        body .product_item {
+          margin-bottom: 20px; } }
     body .product_title {
       font-weight: 600;
       padding-top: 25px;
@@ -259,10 +473,25 @@ body {
     justify-content: space-between;
     padding: 30px 0;
     margin-top: 100px; }
+    @media (max-width: 1199px) {
+      body .footer {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column; } }
     body .footer_logo {
       -webkit-box-flex: 0;
       -ms-flex: 0 0 40%;
       flex: 0 0 40%; }
+      @media (max-width: 1199px) {
+        body .footer_logo {
+          -webkit-box-flex: 0;
+          -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+          margin-bottom: 40px;
+          text-align: center; } }
     body .footer_nav {
       -webkit-box-flex: 0;
       -ms-flex: 0 0 60%;
@@ -274,16 +503,46 @@ body {
       -ms-flex-pack: justify;
       justify-content: space-between;
       color: #fff; }
+      @media (max-width: 1199px) {
+        body .footer_nav {
+          -webkit-box-flex: 0;
+          -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+          -ms-flex-wrap: wrap;
+          flex-wrap: wrap; } }
+    @media (max-width: 767px) {
+      body .footer_list {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 49%;
+        flex: 0 0 49%;
+        margin-bottom: 30px;
+        text-align: center; } }
+    @media (max-width: 575px) {
+      body .footer_list {
+        -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+        flex: 0 0 100%;
+        margin-bottom: 30px;
+        text-align: center; } }
     body .footer_list-title {
       font-size: 10px;
       font-weight: 700;
       text-transform: uppercase; }
+      @media (max-width: 1199px) {
+        body .footer_list-title {
+          font-size: 15px; } }
     body .footer_list-item {
       margin-bottom: 10px; }
+      @media (max-width: 1199px) {
+        body .footer_list-item {
+          margin-bottom: 20px; } }
     body .footer_list-link {
       color: #cbcfd4;
       line-height: 1.1;
       font-size: 14px; }
+      @media (max-width: 1199px) {
+        body .footer_list-link {
+          font-size: 15px; } }
     body .footer_list-img {
       margin-right: 10px; }
   body .sub_footer {
@@ -297,3 +556,6 @@ body {
       font-size: 14px;
       line-height: 1.2;
       padding: 20px 0; }
+      @media (max-width: 575px) {
+        body .sub_footer-text {
+          font-size: 10px; } }
